Update GameLogic.java